@@ -456,6 +456,19 @@ name|randomizedtesting
 operator|.
 name|rules
 operator|.
+name|StaticFieldsInvariantRule
+import|;
+end_import
+begin_import
+import|import
+name|com
+operator|.
+name|carrotsearch
+operator|.
+name|randomizedtesting
+operator|.
+name|rules
+operator|.
 name|SystemPropertiesInvariantRule
 import|;
 end_import
@@ -1362,6 +1375,52 @@ name|maxFailures
 argument_list|)
 expr_stmt|;
 block|}
+comment|/**    * Max 10mb of static data stored in a test suite class after the suite is complete.    * Prevents static data structures leaking and causing OOMs in subsequent tests.    */
+DECL|field|STATIC_LEAK_THRESHOLD
+specifier|private
+specifier|final
+specifier|static
+name|long
+name|STATIC_LEAK_THRESHOLD
+init|=
+literal|10
+operator|*
+literal|1024
+operator|*
+literal|1024
+decl_stmt|;
+comment|/** By-name list of ignored types like loggers etc. */
+DECL|field|STATIC_LEAK_IGNORED_TYPES
+specifier|private
+specifier|final
+specifier|static
+name|Set
+argument_list|<
+name|String
+argument_list|>
+name|STATIC_LEAK_IGNORED_TYPES
+init|=
+name|Collections
+operator|.
+name|unmodifiableSet
+argument_list|(
+operator|new
+name|HashSet
+argument_list|<
+name|String
+argument_list|>
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+literal|"org.slf4j.Logger"
+argument_list|,
+literal|"org.apache.solr.SolrLogFormatter"
+argument_list|)
+argument_list|)
+argument_list|)
+decl_stmt|;
 comment|/**    * This controls how suite-level rules are nested. It is important that _all_ rules declared    * in {@link LuceneTestCase} are executed in proper order if they depend on each     * other.    */
 annotation|@
 name|ClassRule
@@ -1395,6 +1454,62 @@ argument_list|(
 operator|new
 name|TestRuleAssertionsRequired
 argument_list|()
+argument_list|)
+operator|.
+name|around
+argument_list|(
+operator|new
+name|StaticFieldsInvariantRule
+argument_list|(
+name|STATIC_LEAK_THRESHOLD
+argument_list|,
+literal|true
+argument_list|)
+block|{
+specifier|protected
+name|boolean
+name|accept
+parameter_list|(
+name|java
+operator|.
+name|lang
+operator|.
+name|reflect
+operator|.
+name|Field
+name|field
+parameter_list|)
+block|{
+if|if
+condition|(
+name|STATIC_LEAK_IGNORED_TYPES
+operator|.
+name|contains
+argument_list|(
+name|field
+operator|.
+name|getType
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+condition|)
+block|{
+return|return
+literal|false
+return|;
+block|}
+return|return
+name|super
+operator|.
+name|accept
+argument_list|(
+name|field
+argument_list|)
+return|;
+block|}
+block|}
 argument_list|)
 operator|.
 name|around
